# AI-Pre-Sales-Copilot

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py  startup_validation.py
app/ai/: bedrock_client.py  embedding_client.py  llm_client.py  prompts.py
app/db/: chroma_client.py
app/ingestion/: ingest_projects.py
app/routers/: ingestion_router.py  rfp_router.py
app/services/: estimation_service.py  extraction_service.py  presales_orchestrator.py  proposal_service.py  retrieval_service.py  sow_schema.py  sow_service.py
app/utils/: chunking.py  file_handler.py
